# ESP32ETH

./: .gitignore  .gitmodules  README.md  algPlot.m  escAlg.c  fd_freqbase.m  makefile  sdkconfig  windowsTestapp.c
components/UREPL_ADC/: CMakeLists.txt  UREPL_ADC.c  UREPL_ADC.h
components/UREPL_PWM/: .#UREPL_PWM.c  CMakeLists.txt  UREPL_PWM.c  UREPL_PWM.h
components/UREPL_PWMDET/: CMakeLists.txt  UREPL_PWMDET.h  feature_PWMDET.c
components/UREPL_camera/: UREPL_camera.c  UREPL_camera.h
components/ethernet_init/: Kconfig.projbuild  ethernet_init.c
components/universal_REPL/: CMakeLists.txt  dispatcher.c  dispatcher.h  dispatcherconn_UART.c  dispatcherconn_UART.h  dispatcherconn_ethernet.c  dispatcherconn_ethernet.h  feature_ETH.c  feature_ETH.h  feature_UART.c  feature_UART.h  feature_WIFI.c  feature_WIFI.h  feature_errMan.c  feature_errMan.h  feature_nvsMan.c  feature_nvsMan.h
main/: CMakeLists.txt  dispatcher.c  dispatcher.h  dispatcherconn_UART.c  dispatcherconn_ethernet.c  dispatcherconn_ethernet.h  errMan.c  errMan.h  ethernet_example_main.c  feature_ETH.c  feature_ETH.h  feature_UART.c  feature_UART.h  feature_errMan.c  feature_errMan.h  feature_nvsMan.c  main.c  nvsMan.c  nvsMan.h  util.c  util.h
windowsTestappCamera/: jpgd.cpp  makefile  windowsTestappCamera.cpp
